<?xml version="1.0"?>
<package format="3">
  <name>smf_move_base_mapping</name>
  <version>0.0.0</version>
  <description>The smf_move_base_mapping package</description>

  <maintainer email="sasm@todo.todo">sasm</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- more msgs deps -->
  <depend>nav_msgs</depend>
  <depend>smf_move_base_msgs</depend>
  <depend>pedsim_ros</depend>


  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>pedsim_msgs</depend>
  <depend>grid_map</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>