<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smf_move_base_mapping</name>
  <version>0.0.0</version>
  <description>The smf_move_base_mapping package</description>
  <maintainer email="silvas1@cardiff.ac.uk">Steven Silva</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>


  <!-- more msgs deps -->
  <depend>nav_msgs</depend>
  <depend>smf_move_base_msgs</depend>
  <!-- <depend>pedsim_msgs</depend> -->
  <depend>tf2_ros</depend>

  <depend>pedsim_msgs</depend>
  <depend>grid_map</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
