<?xml version="1.0"?>
<package format="2">
  <name>smf_move_base_msgs</name>
  <version>0.0.0</version>
  <description>The smf_move_base_msgs package</description>

  <maintainer email="sasm@todo.todo">sasm</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>pedsim_ros</depend>

  <depend>geometry_msgs</depend>
  <depend>roslib</depend>
  <depend>actionlib_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>